--- a/src/Components/EventsComponent/animation.scss
+++ b/src/Components/EventsComponent/animation.scss
@@ -1,3 +1,6 @@
+$gradient: linear-gradient(to bottom, #3cbaf5, #13719ce5);
+$gradient2: linear-gradient(to bottom, #12398daf, #001e2caf);
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap');
 .eve-anim {
     // min-height: 95vh;
     min-height: 95vh;
@@ -27,6 +30,7 @@
         align-items: center;
         grid-template-rows: 1fr 10fr;
         .roboMsg {
+            background-image: $gradient2;
             background-color: #001e2c;
             width: 70%;
             position: relative;
@@ -44,10 +48,14 @@
                 position: absolute;
                 width: 100%;
                 margin: auto;
+                text-align: center;
             }
             #Robotext {
-                color: #12f57c;
+                color: #1ff00c;
+                font-weight: 500;
                 padding: 7px;
+                font-size: 16px;
+                // font-family: 'Orbitron', sans-serif;
             }
             span {
                 height: 30px;
