--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/CredenzEye.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/CredenzEye.css
@@ -3,7 +3,7 @@
 }
 
 .evePage #credenzeye_svg__Layer_1 {
-    border-radius: 50%;
-    background: #e1edf3;
+    border-radius: 20px;
+    background: #cbeef8;
     margin: auto;
 }
