--- a/src/Components/EventsComponent/eventCard.css
+++ b/src/Components/EventsComponent/eventCard.css
@@ -16,9 +16,12 @@
   margin: 0 auto;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  -webkit-box-shadow: 0px 0px 8px #131313;
-          box-shadow: 0px 0px 8px #131313;
   cursor: pointer;
+}
+
+.evePage .event-wrap div.customCard {
+  background-color: #033869;
+  border: 3px solid skyblue;
 }
 
 .evePage .event-wrap div {
@@ -37,17 +40,18 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-  border-radius: 15px;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
 .evePage .event-wrap div img {
-  height: 80%;
+  height: 90%;
   margin: auto;
   pointer-events: none;
+  -webkit-filter: invert(1);
+          filter: invert(1);
 }
 
 .evePage .event-wrap div h5 {
@@ -58,11 +62,7 @@
   text-align: center;
   margin: auto 0;
   pointer-events: none;
-}
-
-.evePage .event-wrap div:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  color: white;
 }
 
 .evePage .fadeOut1 {
@@ -139,6 +139,10 @@
   bottom: -7%;
 }
 
+.evePage .detect {
+  background-blend-mode: exclusion;
+}
+
 .evePage .detect span#scanner {
   content: '';
   top: 0;
@@ -153,15 +157,15 @@
 }
 
 .evePage .detect.red {
-  border-color: red;
+  border-color: red !important;
 }
 
 .evePage .detect.blue {
-  border-color: blue;
+  border-color: blue !important;
 }
 
 .evePage .detect.green {
-  border-color: green;
+  border-color: green !important;
 }
 
 .evePage .detect.green::after {
@@ -178,12 +182,10 @@
 }
 
 .evePage .button {
-  border: 1px solid green;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
   height: 50px;
   width: 200px;
-  border-radius: 20px 5px 20px 0px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -196,52 +198,52 @@
           justify-content: center;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  font: 15px sans-serif;
-  font-weight: 300;
-  text-shadow: 0 0 20px #fff;
-  text-transform: uppercase;
-  -webkit-animation: breath2 2s 0.5s infinite alternate;
-  animation: breath2 2s 0.5s infinite alternate;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
+  text-shadow: 0 0 2px #fff;
   cursor: pointer;
 }
 
+.evePage .button.grid1 {
+  border-radius: 20px 5px 20px 0px;
+  -webkit-animation: breath1 3.6s infinite;
+          animation: breath1 3.6s infinite;
+}
+
+.evePage .button.grid2 {
+  border-radius: 5px 20px 0px 20px;
+  -webkit-animation: breath2 3.6s infinite;
+          animation: breath2 3.6s infinite;
+}
+
+.evePage .firstRow {
+  -webkit-animation-delay: 0s !important;
+          animation-delay: 0s !important;
+}
+
+.evePage .secondRow {
+  -webkit-animation-delay: 1.2s !important;
+          animation-delay: 1.2s !important;
+}
+
+.evePage .thirdRow {
+  -webkit-animation-delay: 2.4s !important;
+          animation-delay: 2.4s !important;
+}
+
 .evePage .button:before {
-  content: "";
   display: block;
-  width: calc(100% - 22px);
+  width: calc(100% - 2px);
   height: calc(100% - 8px);
   -webkit-animation: breath 2s infinite alternate;
   animation: breath 2s infinite alternate;
-  left: 10px;
-  top: 3px;
   position: absolute;
   background-color: transparent;
   border: 1px solid #fff;
   border-radius: 15px 3px 15px 3px;
 }
 
-.evePage .button.fire {
-  border-color: #ffeca8;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 138, 48, 0.6)), to(rgba(240, 96, 29, 0.6)));
-  background-image: linear-gradient(to bottom, rgba(255, 138, 48, 0.6), rgba(240, 96, 29, 0.6));
-  -webkit-box-shadow: 0 0 70px rgba(255, 138, 48, 0.6), 0 5px 20px rgba(255, 138, 48, 0.6), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
-          box-shadow: 0 0 70px rgba(255, 138, 48, 0.6), 0 5px 20px rgba(255, 138, 48, 0.6), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
-  color: #ffeca8;
-}
-
-.evePage .button.fire:before {
-  -webkit-box-shadow: inset 0 0 30px 0 #ffeca8;
-          box-shadow: inset 0 0 30px 0 #ffeca8;
-}
-
 .evePage .button.ice {
-  border-color: #a8ecff;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(92, 161, 250, 0.5)), to(rgba(48, 108, 238, 0.5)));
-  background-image: linear-gradient(to bottom, rgba(92, 161, 250, 0.5), rgba(48, 108, 238, 0.5));
-  -webkit-box-shadow: 0 0 20px rgba(48, 138, 255, 0.5), 0 5px 20px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
-          box-shadow: 0 0 20px rgba(48, 138, 255, 0.5), 0 5px 20px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(64, 175, 226, 0.5)), to(rgba(48, 108, 238, 0.5)));
+  background-image: linear-gradient(to bottom, rgba(64, 175, 226, 0.5), rgba(48, 108, 238, 0.5));
   color: #141414;
 }
 
@@ -250,24 +252,14 @@
           box-shadow: inset 0 0 30px 0 #a8ecff;
 }
 
-.evePage .button:hover.fire {
-  -webkit-box-shadow: 0 0 70px rgba(255, 138, 48, 0.8), 0 5px 20px rgba(255, 138, 48, 0.8), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
-          box-shadow: 0 0 70px rgba(255, 138, 48, 0.8), 0 5px 20px rgba(255, 138, 48, 0.8), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
-}
-
-.evePage .button:hover.fire:before {
-  -webkit-box-shadow: inset 0 0 50px 0 #ffeca8;
-          box-shadow: inset 0 0 50px 0 #ffeca8;
-}
-
-.evePage .button:hover.ice {
-  -webkit-box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff;
-          box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff;
-}
-
-.evePage .button:hover.ice:before {
-  -webkit-box-shadow: inset 0 0 50px 0 #a8ecff;
-          box-shadow: inset 0 0 50px 0 #a8ecff;
+.evePage .button:hover::after {
+  content: '';
+  -webkit-transform: scale(1.02) !important;
+          transform: scale(1.02) !important;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  -webkit-box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff !important;
+          box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff !important;
 }
 
 .evePage .button + .button {
@@ -276,47 +268,95 @@
   animation-delay: 0.3s;
 }
 
-@-webkit-keyframes breath {
+@-webkit-keyframes breath1 {
   0% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
-  100% {
-    -webkit-transform: scaleX(0.95);
-            transform: scaleX(0.95);
+  15% {
+    -webkit-transform: skewX(2deg) scaleX(0.95);
+            transform: skewX(2deg) scaleX(0.95);
+    -webkit-box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  }
+  30% {
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+  }
+  80% {
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
 }
 
-@keyframes breath {
+@keyframes breath1 {
   0% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
-  100% {
-    -webkit-transform: scaleX(0.95);
-            transform: scaleX(0.95);
+  15% {
+    -webkit-transform: skewX(2deg) scaleX(0.95);
+            transform: skewX(2deg) scaleX(0.95);
+    -webkit-box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  }
+  30% {
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+  }
+  80% {
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
 }
 
 @-webkit-keyframes breath2 {
   0% {
-    -webkit-transform: skewX(-5deg) scaleX(1);
-            transform: skewX(-5deg) scaleX(1);
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
-  100% {
-    -webkit-transform: skewX(0deg) scaleX(0.95);
-            transform: skewX(0deg) scaleX(0.95);
+  15% {
+    -webkit-transform: skewX(-2deg) scaleX(0.95);
+            transform: skewX(-2deg) scaleX(0.95);
+    -webkit-box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  }
+  30% {
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+  }
+  80% {
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
 }
 
 @keyframes breath2 {
   0% {
-    -webkit-transform: skewX(-5deg) scaleX(1);
-            transform: skewX(-5deg) scaleX(1);
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
-  100% {
-    -webkit-transform: skewX(0deg) scaleX(0.95);
-            transform: skewX(0deg) scaleX(0.95);
+  15% {
+    -webkit-transform: skewX(-2deg) scaleX(0.95);
+            transform: skewX(-2deg) scaleX(0.95);
+    -webkit-box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  }
+  30% {
+    -webkit-transform: skewX(0deg) scaleX(1);
+            transform: skewX(0deg) scaleX(1);
+  }
+  80% {
+    -webkit-box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+            box-shadow: 0 0 4px rgba(48, 138, 255, 0.5), 0 5px 4px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
   }
 }
 
