--- a/src/Components/EventsComponent/robo.css
+++ b/src/Components/EventsComponent/robo.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap");
 .robo {
   -webkit-transform: scale(0.7);
           transform: scale(0.7);
@@ -38,6 +39,46 @@
           animation: float 3s infinite;
 }
 
+.robo #head span.eari {
+  height: 45px;
+  width: 15px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background-image: linear-gradient(to bottom, #8d8989, #5a5858);
+  position: absolute;
+  left: 45px;
+  top: 30px;
+}
+
+.robo #head span.eari span.earo {
+  height: 24px;
+  width: 10px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background-image: linear-gradient(to bottom, #8d8989, #5a5858);
+  position: absolute;
+  left: -15px;
+  top: 10px;
+}
+
+.robo #head span.eari2 {
+  height: 45px;
+  width: 15px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background-image: linear-gradient(to bottom, #8d8989, #5a5858);
+  position: absolute;
+  right: 45px;
+  top: 30px;
+}
+
+.robo #head span.eari2 span.earo2 {
+  height: 24px;
+  width: 10px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background-image: linear-gradient(to bottom, #8d8989, #5a5858);
+  position: absolute;
+  right: -15px;
+  top: 10px;
+}
+
 .robo #head .iris {
   margin: 0 auto;
   width: 50px;
@@ -45,8 +86,8 @@
   border-radius: 100%;
   background: black;
   z-index: 10;
-  -webkit-transform: scale(0.6);
-          transform: scale(0.6);
+  -webkit-transform: scale(0.45);
+          transform: scale(0.45);
   /*circulo branco do olho maior*/
   /*circulo branco do olho menor*/
 }
@@ -62,6 +103,7 @@
   background: white;
   -webkit-animation: eyeNotAnimation 2s infinite;
           animation: eyeNotAnimation 2s infinite;
+  visibility: visible !important;
 }
 
 .robo #head .iris::before {
@@ -75,6 +117,7 @@
   background: white;
   -webkit-animation: eyeNotAnimation 2s infinite;
           animation: eyeNotAnimation 2s infinite;
+  visibility: visible !important;
 }
 
 .robo #head .borda-iris {
@@ -84,23 +127,26 @@
   height: 62px;
   margin: 0 auto;
   border-radius: 100%;
-  background: #2fb3ff;
+  background: #259ff0;
   z-index: -1;
-  -webkit-transform: scale(0.6);
-          transform: scale(0.6);
+  -webkit-transform: scale(0.45);
+          transform: scale(0.45);
 }
 
 .robo #head .olho {
   position: relative;
-  top: -120px;
+  top: -105px;
   width: 40%;
-  border-radius: 100%;
-  margin: 0 auto;
+  height: 1%;
+  border-radius: 15px;
+  margin: auto;
   background: #e1edf3;
   z-index: -2;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  border: 12px solid #001e2c;
+  -webkit-transform: scale(0.6);
+          transform: scale(0.6);
+  border: 3px solid #001e2c;
+  -webkit-box-shadow: 0 0 5px 5px #1780d6;
+          box-shadow: 0 0 5px 5px #1780d6;
 }
 
 .robo #head .borda-olho {
@@ -120,37 +166,39 @@
 .robo #head .head {
   margin: 0 auto;
   position: relative;
-  top: -380px;
-  width: 260px;
-  height: 10px;
-  border-right: 40px solid transparent;
-  border-left: 40px solid transparent;
-  border-bottom: 140px solid #2fb3ff;
+  top: -360px;
+  width: 190px;
+  height: 150px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3cbaf5), to(#13719ce5));
+  background-image: linear-gradient(to bottom, #3cbaf5, #13719ce5);
   z-index: -4;
-  border-radius: 40px 40px 40px 40px;
-  border-radius: 500px 500px 500px 500px;
+  border-radius: 15px 15px 15px 15px;
 }
 
 .robo #head .head::before {
-  height: 20px;
+  height: 5px;
   width: 20%;
   position: fixed;
   right: 0;
   left: 0;
   bottom: 0;
   margin: auto;
-  bottom: -34px;
+  bottom: -20px;
   z-index: 500;
-  border: 4px solid black;
+  border: 3px solid black;
+  border-top: 2px solid black;
+  -webkit-animation: speak 2s infinite;
+          animation: speak 2s infinite;
 }
 
 .robo .antena {
   position: relative;
-  bottom: 600px;
+  bottom: 550px;
   width: 5px;
   height: 100px;
   margin: 0 auto;
-  background: #292929;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background-image: linear-gradient(to bottom, #8d8989, #5a5858);
   z-index: -5;
 }
 
@@ -168,6 +216,8 @@
   width: 140px;
   height: 200px;
   background: #e1edf3;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f6f7), to(#9da9af));
+  background-image: linear-gradient(to bottom, #f4f6f7, #9da9af);
   border-radius: 10px 10px 30px 30px;
   overflow: hidden;
   /*desenho barriga*/
@@ -182,7 +232,7 @@
   width: 180px;
   height: 10px;
   border-radius: 00%;
-  background: #2fb3ff;
+  background: #259ff0;
 }
 
 .robo-body .peito::before {
@@ -197,11 +247,13 @@
   z-index: 15;
   -webkit-box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
           box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+  -webkit-animation: lighting2 1s infinite;
+          animation: lighting2 1s infinite;
 }
 
 .robo-body .peito.lighting::before {
-  -webkit-animation: lighting 0.6s infinite;
-          animation: lighting 0.6s infinite;
+  -webkit-animation: lighting 0.6s infinite !important;
+          animation: lighting 0.6s infinite !important;
 }
 
 .robo-body .tela {
@@ -211,11 +263,11 @@
   line-height: 45px;
   background: #001e2c;
   border-radius: 5px;
-  border: solid 5px #2fb3ff;
+  border: solid 5px #259ff0;
   text-align: center;
-  color: #2fb3ff;
+  color: #259ff0;
   font-size: 2em;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto" sans-serif;
   font-weight: bold;
   letter-spacing: 2px;
   display: -webkit-box;
@@ -270,7 +322,8 @@
   margin: 0 auto;
   width: 100px;
   height: 15px;
-  background: #e1edf3;
+  background: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background: linear-gradient(to bottom, #8d8989, #5a5858);
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   z-index: -1;
@@ -298,7 +351,8 @@
   -webkit-transition-delay: 0.1s;
           transition-delay: 0.1s;
   border-radius: 5px;
-  background: #2fb3ff;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3cbaf5), to(#13719ce5));
+  background: linear-gradient(to bottom, #3cbaf5, #13719ce5);
   /*mao*/
 }
 
@@ -322,7 +376,7 @@
   width: 35px;
   height: 35px;
   border-radius: 100%;
-  background: #2fb3ff;
+  background: #259ff0;
 }
 
 .braco-esquerdo::before {
@@ -384,7 +438,8 @@
   height: 15px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  background: #e1edf3;
+  background: -webkit-gradient(linear, left top, left bottom, from(#8d8989), to(#5a5858));
+  background: linear-gradient(to bottom, #8d8989, #5a5858);
   z-index: -1;
   -webkit-transform: rotate(25deg);
           transform: rotate(25deg);
@@ -397,7 +452,6 @@
   top: -80%;
   width: 100px;
   height: 40px;
-  background: red;
   z-index: 100;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -406,7 +460,8 @@
   -webkit-transform-origin: 110% 50%;
           transform-origin: 110% 50%;
   border-radius: 5px;
-  background: #2fb3ff;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3cbaf5), to(#13719ce5));
+  background: linear-gradient(to bottom, #3cbaf5, #13719ce5);
   -webkit-transition-delay: 0.3s;
           transition-delay: 0.3s;
   /*mao*/
@@ -432,7 +487,7 @@
   width: 35px;
   height: 35px;
   border-radius: 100%;
-  background: #2fb3ff;
+  background: #259ff0;
 }
 
 .braco-direito::before {
@@ -453,7 +508,7 @@
   width: 200px;
   height: 100px;
   background: #c0392b;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto" sans-serif;
   font-size: 1.3em;
   border-radius: 20px;
   -webkit-transition: all ease-in-out 1s;
@@ -750,6 +805,80 @@
     background-color: #60e660;
     -webkit-box-shadow: 40px 0 0 #459945, 80px 0 0 #2d612d;
             box-shadow: 40px 0 0 #459945, 80px 0 0 #2d612d;
+  }
+}
+
+@-webkit-keyframes lighting2 {
+  0% {
+    background-color: #001e2c;
+    -webkit-box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+            box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+  }
+  50% {
+    background-color: #005e7d;
+    -webkit-box-shadow: 40px 0 0 #001e2c, 80px 0 0 #005e7d;
+            box-shadow: 40px 0 0 #001e2c, 80px 0 0 #005e7d;
+  }
+  100% {
+    background-color: #001e2c;
+    -webkit-box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+            box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+  }
+}
+
+@keyframes lighting2 {
+  0% {
+    background-color: #001e2c;
+    -webkit-box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+            box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+  }
+  50% {
+    background-color: #005e7d;
+    -webkit-box-shadow: 40px 0 0 #001e2c, 80px 0 0 #005e7d;
+            box-shadow: 40px 0 0 #001e2c, 80px 0 0 #005e7d;
+  }
+  100% {
+    background-color: #001e2c;
+    -webkit-box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+            box-shadow: 40px 0 0 #005e7d, 80px 0 0 #001e2c;
+  }
+}
+
+@-webkit-keyframes speak {
+  0% {
+    border-bottom: 3px solid black;
+  }
+  35% {
+    border-bottom: 5px solid black;
+  }
+  50% {
+    border-bottom: 3px solid black;
+  }
+  65% {
+    border-bottom: 7px solid black;
+  }
+  80% {
+    height: 0px !important;
+    border-bottom: 3px solid black;
+  }
+}
+
+@keyframes speak {
+  0% {
+    border-bottom: 3px solid black;
+  }
+  35% {
+    border-bottom: 5px solid black;
+  }
+  50% {
+    border-bottom: 3px solid black;
+  }
+  65% {
+    border-bottom: 7px solid black;
+  }
+  80% {
+    height: 0px !important;
+    border-bottom: 3px solid black;
   }
 }
 
