--- a/src/Components/EventsComponent/animation.css
+++ b/src/Components/EventsComponent/animation.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap");
 .eve-anim {
-  min-height: 95vh;
+  min-height: 100vh;
   width: 80%;
   margin: auto;
   padding-top: 0px;
@@ -12,6 +12,19 @@
           align-items: center;
   -ms-grid-columns: 1fr 1.5fr 1fr;
       grid-template-columns: 1fr 1.5fr 1fr;
+}
+
+.eve-anim ::-webkit-scrollbar {
+  width: 5px;
+}
+
+.eve-anim ::-webkit-scrollbar-track {
+  background-color: #ebebeb;
+}
+
+.eve-anim ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #6d6d6d;
 }
 
 .eve-anim .events-grid {
@@ -72,6 +85,7 @@
 .eve-anim .roboWrap .roboMsg #RobotextWrap {
   position: absolute;
   width: 100%;
+  height: 100%;
   margin: auto;
   text-align: center;
 }
@@ -79,6 +93,8 @@
 .eve-anim .roboWrap .roboMsg #Robotext {
   color: #1ff00c;
   font-weight: 500;
+  height: 100%;
+  overflow: hidden;
   padding: 7px;
   font-size: 16px;
 }
@@ -108,6 +124,12 @@
 .eve-anim .disabled {
   background-color: red;
   pointer-events: none;
+}
+
+.eve-anim.flex {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
 }
 
 @media (max-width: 1200px) {
