--- a/src/Components/EventsComponent/eventCard.css
+++ b/src/Components/EventsComponent/eventCard.css
@@ -24,6 +24,44 @@
   border: 3px solid skyblue;
 }
 
+.evePage .event-wrap div.customCard span#glow {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  z-index: -50;
+  pointer-events: none;
+  -webkit-box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+          box-shadow: 0 0 25px rgba(66, 146, 250, 0.5), 0 5px 25px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  -webkit-box-shadow: 0 0 25px #00f7ff;
+          box-shadow: 0 0 25px #00f7ff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-animation: none !important;
+          animation: none !important;
+}
+
+.evePage .event-wrap div.customCard span#glow ::before {
+  -webkit-box-shadow: inset 0 0 30px 0 #a8ecff;
+          box-shadow: inset 0 0 30px 0 #a8ecff;
+}
+
+.evePage .event-wrap div.customCard #glow.grid1 {
+  border-radius: 20px 5px 20px 0px;
+  -webkit-animation: breath1 3.6s infinite;
+          animation: breath1 3.6s infinite;
+}
+
+.evePage .event-wrap div.customCard #glow.grid2 {
+  border-radius: 5px 20px 0px 20px;
+  -webkit-animation: breath2 3.6s infinite;
+          animation: breath2 3.6s infinite;
+}
+
+.evePage .event-wrap div.customCard:hover span#glow {
+  opacity: 1;
+}
+
 .evePage .event-wrap div {
   height: 100%;
   width: 100%;
@@ -143,6 +181,10 @@
   background-blend-mode: exclusion;
 }
 
+.evePage .detect span#glow {
+  opacity: 0.1 !important;
+}
+
 .evePage .detect span#scanner {
   content: '';
   top: 0;
@@ -165,7 +207,7 @@
 }
 
 .evePage .detect.green {
-  border-color: green !important;
+  border-color: #00ff0d !important;
 }
 
 .evePage .detect.green::after {
@@ -176,7 +218,7 @@
   background-color: #09ff00;
   position: absolute;
   font-size: 10px;
-  bottom: -10%;
+  bottom: -15%;
   right: 0;
   font-weight: 500;
 }
@@ -250,16 +292,6 @@
 .evePage .button.ice:before {
   -webkit-box-shadow: inset 0 0 30px 0 #a8ecff;
           box-shadow: inset 0 0 30px 0 #a8ecff;
-}
-
-.evePage .button:hover::after {
-  content: '';
-  -webkit-transform: scale(1.02) !important;
-          transform: scale(1.02) !important;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-  -webkit-box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff !important;
-          box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff !important;
 }
 
 .evePage .button + .button {
