--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -97,9 +97,11 @@
 }
 
 .evePage .modalWrap .modalBody ul.tabs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(70px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  grid-row-gap: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -107,11 +109,10 @@
       -ms-flex-pack: center;
           justify-content: center;
   width: 80%;
-  margin: 0;
+  margin: 40px;
 }
 
 .evePage .modalWrap .modalBody ul.tabs li {
-  margin: 20px;
   list-style: none;
 }
 
@@ -149,6 +150,7 @@
   height: 250px;
   width: 90%;
   margin: 20px;
+  margin-top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,6 +185,19 @@
   }
   .evePage .modalWrap {
     width: 80%;
+  }
+}
+
+@media (max-width: 600px) {
+  .evePage .modalWrap {
+    width: 90%;
+  }
+  .evePage .modalWrap .modalBody {
+    margin: 10px;
+  }
+  .evePage .modalWrap .modalBody .info {
+    max-height: 50vh;
+    overflow-y: auto;
   }
 }
 /*# sourceMappingURL=eventmodal.css.map */
