--- a/src/Components/EventsComponent/robo.css
+++ b/src/Components/EventsComponent/robo.css
@@ -202,6 +202,12 @@
   z-index: -5;
 }
 
+.hide-robo {
+  opacity: 0;
+  -webkit-transform: translateY(50px) scale(0.7);
+          transform: translateY(50px) scale(0.7);
+}
+
 .robo-body {
   width: 100%;
   height: 100px;
