--- a/src/Components/EventsComponent/robo.scss
+++ b/src/Components/EventsComponent/robo.scss
@@ -194,6 +194,11 @@ $roboto: 'Roboto' sans-serif;
     }
 }
 
+.hide-robo {
+    opacity: 0;
+    transform: translateY(50px) scale(0.7);
+}
+
 .robo-body {
     width: 100%;
     height: 100px;
