--- a/src/Components/HomeComponent/HomeComponent.module.css
+++ b/src/Components/HomeComponent/HomeComponent.module.css
@@ -1,6 +1,6 @@
-.body{
+/* .body{
     padding: 0 150px;
-}
+} */
 
 .sponsor{
     margin: 40px 0 ;
@@ -11,9 +11,9 @@
 } */
 
 
-@media(max-width: 600px){
+/* @media(max-width: 600px){
     .body{
         padding: 0;
         padding: 20px;
-    }
-}
+
+    } */
